--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "date-fns": "^2.29.1",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
+    "next-superjson-plugin": "^0.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "superjson": "^1.9.1"
   },
   "devDependencies": {
     "@types/node": "18.7.6",
