--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.2.1",
+    "@tanstack/react-query": "^4.2.1",
     "date-fns": "^2.29.1",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
